<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layaout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ECECEC"
    tools:context=".EnterActivity">

    <View
        android:id="@+id/view_barra2"
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:layout_marginStart="124dp"
        android:layout_marginTop="105dp"
        android:layout_marginEnd="124dp"
        android:background="#2D2D2D"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_enter"
        android:layout_width="220dp"
        android:layout_height="64dp"
        android:layout_marginTop="24dp"
        android:backgroundTint="#2D2D2D"
        android:fontFamily="@font/wotfard_bold"
        android:onClick="goToList"
        android:text="@string/btn_enter"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_enter_tip" />

    <TextView
        android:id="@+id/text_enter"
        android:layout_width="248dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:fontFamily="@font/wotfard_regular"
        android:gravity="center"
        android:text="@string/text_enter"
        android:textColor="@color/black"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_enter_tip"
        android:layout_width="224dp"
        android:layout_height="55dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/wotfard_extralight"
        android:gravity="center"
        android:text="@string/text_enter_tip"
        android:textColor="#090808"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_logo" />

    <ImageView
        android:id="@+id/img_logo"
        android:layout_width="160dp"
        android:layout_height="186dp"
        android:layout_marginStart="115dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="115dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.476"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_enter"
        app:srcCompat="@drawable/logo" />

</androidx.constraintlayout.widget.ConstraintLayout>