<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ECECEC"
    tools:context=".ListActivity">

    <TextView
        android:id="@+id/text_list_tip"
        android:layout_width="224dp"
        android:layout_height="55dp"
        android:layout_marginTop="6dp"
        android:fontFamily="@font/wotfard_extralight"
        android:gravity="center"
        android:text="@string/text_list_tip"
        android:textColor="#090808"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view_barra" />

    <Button
        android:id="@+id/btn_new_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:backgroundTint="#2D2D2D"
        android:fontFamily="@font/wotfard_bold"
        android:onClick="goToNewList"
        android:radius="25dp"
        android:text="@string/btn_new_list"
        android:textColor="#FFEFEFEF"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_list" />

    <Button
        android:id="@+id/btn_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:backgroundTint="#2D2D2D"
        android:bottomLeftRadius="100dp"
        android:bottomRightRadius="10dp"
        android:fontFamily="@font/wotfard_bold"
        android:includeFontPadding="true"
        android:onClick="goToList"
        android:text="@string/btn_play_quiz"
        android:textColor="#EFEFEF"
        android:textSize="24dp"
        android:topLeftRadius="10dp"
        android:topRightRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_list_tip" />

    <TextView
        android:id="@+id/txt_quizi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/wotfard_light"
        android:text="QUIZI PARTY"
        android:textColor="#373737"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/btn_list"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view_barra"
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:layout_marginStart="124dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="124dp"
        android:background="#2D2D2D"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_quizi" />

</androidx.constraintlayout.widget.ConstraintLayout>