<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ECECEC"
    tools:context=".QuizActivity">

    <TextView
        android:id="@+id/text_quiz_tip"
        android:layout_width="244dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="120dp"
        android:fontFamily="@font/wotfard_extralight"
        android:gravity="center"
        android:text="@string/text_quiz_tip"
        android:textColor="#090808"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

    <View
        android:id="@+id/view_barra3"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="32dp"
        android:background="#A1A1A1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/label_question" />

    <TextView
        android:id="@+id/label_question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/wotfard_regular"
        android:text="@string/question"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.091"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.061" />

    <TextView
        android:id="@+id/text_question"
        android:layout_width="345dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/wotfard_medium"
        android:text="TextView"
        android:textColor="?android:attr/textColorPrimary"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/label_question" />

    <View
        android:id="@+id/ruler"
        android:layout_width="345dp"
        android:layout_height="1dp"
        android:layout_below="@id/text_question"
        android:layout_marginTop="9dp"
        android:background="#813E3E3E"
        app:layout_constraintBottom_toTopOf="@+id/radioGroup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_question"
        app:layout_constraintVertical_bias="0.052" />

    <RadioGroup
        android:id="@+id/answer_group"
        android:layout_width="345dp"
        android:layout_height="195dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ruler">

        <RadioButton
            android:id="@+id/answer1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/wotfard_regular"
            android:text="RadioButton" />

        <RadioButton
            android:id="@+id/answer2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/wotfard_light"
            android:text="RadioButton" />

        <RadioButton
            android:id="@+id/answer3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/wotfard_regular"
            android:text="RadioButton" />

        <RadioButton
            android:id="@+id/answer4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/wotfard_regular"
            android:text="RadioButton" />
    </RadioGroup>

    <Button
        android:id="@+id/btn_check"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="40dp"
        android:backgroundTint="#2D2D2D"
        android:fontFamily="@font/wotfard_bold"
        android:text="@string/next"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btn_prev"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginBottom="40dp"
        android:backgroundTint="#2D2D2D"
        android:fontFamily="@font/wotfard_bold"
        android:text="@string/prev"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp" />

    <ImageView
        android:id="@+id/img_tip"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginEnd="6dp"
        android:layout_marginBottom="-30dp"
        app:layout_constraintBottom_toTopOf="@+id/text_quiz_tip"
        app:layout_constraintEnd_toStartOf="@+id/text_quiz_tip"
        app:srcCompat="@drawable/i_icon" />

</androidx.constraintlayout.widget.ConstraintLayout>